# FloatingPomodoro

./: .gitignore  AGENTS.md  README.md  meson.build  meson_options.txt
data/: resources.gresource.xml
data/desktop/: floating-pomodoro.desktop  xfce4-floating-pomodoro.desktop
data/styles/: app.css
packaging/debian/: changelog  control  copyright  floating-pomodoro.install  rules  xfce4-floating-pomodoro.install
src/: main.c  meson.build
src/app/: app_init.c  app_init.h  app_state.c  app_state.h
src/core/: pomodoro_timer.c  pomodoro_timer.h  task_store.c  task_store.h
src/focus/: chrome_cdp_client.c  chrome_cdp_client.h  focus_guard.c  focus_guard.h  focus_guard_config.c  focus_guard_config.h  focus_guard_internal.h  focus_guard_relevance.c  focus_guard_stats.c  focus_guard_stats_ui.c  focus_guard_tick.c  focus_guard_warnings.c  focus_guard_x11.c  focus_guard_x11.h  ollama_client.c  ollama_client.h  trafilatura_client.c  trafilatura_client.h
src/overlay/: overlay_window.c  overlay_window.h  overlay_window_actions.c  overlay_window_draw.c  overlay_window_internal.h  overlay_window_size.c  overlay_window_ui.c
src/storage/: settings_storage.c  settings_storage.h  task_storage.c  task_storage.h  usage_stats_storage.c  usage_stats_storage.h
src/tray/: tray_icon.c  tray_item.c  tray_item.h  tray_item_internal.h  tray_menu.c  tray_sni.c
src/ui/: dialogs.c  dialogs.h  dialogs_archive_settings.c  dialogs_archived.c  dialogs_confirm.c  dialogs_focus_guard.c  dialogs_focus_guard_internal.h  dialogs_focus_guard_list.c  dialogs_focus_guard_ollama.c  dialogs_focus_guard_ui.c  dialogs_timer_settings.c  dialogs_timer_settings_internal.h  dialogs_timer_settings_pages.c  dialogs_timer_settings_ui.c  focus_guard_settings_model.c  focus_guard_settings_model.h  main_window.c  main_window.h  main_window_actions.c  main_window_internal.h  main_window_timer.c  main_window_ui.c  task_list.c  task_list.h  task_list_edit.c  task_list_format.c  task_list_internal.h  task_list_rows.c
src/utils/: autostart.c  autostart.h  x11.c  x11.h
tests/: integration_chrome_ollama.c  meson.build
